# sponsoryeet

./: CMakeLists.txt  Makefile  README.md  cast_channel.proto  castchannel.cpp  castchannel.h  chromecast.h  connection.h  ec_protobuf.h  globals.h  loop.h  main.cc  main.cpp  mdns.h  sponsor.h  ssl.cc  ssl.h  util.h
